Реализованы комментарии